WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249923
REGRESSION (Safari 14-16): Duplicated CR-LF in textarea with wrap="hard"
https://bugs.webkit.org/show_bug.cgi?id=249923
Summary
REGRESSION (Safari 14-16): Duplicated CR-LF in textarea with wrap="hard"
Andrey Pashnin
Reported
2022-12-28 04:58:11 PST
If I submit a form with a textarea containing "A0d0aB" it sends "A0d0a0d0aB". If I submit a form with a textarea containing "A0d0a0d0aB" it sends "A0d0a0d0a0d0a0d0aB". (each CR-LF pair gets duplicated) It works fine from Chrome and the old Safari, but not the new one. I couldn't find how to get the specific version of the WebKit. OK: from Safari (Version 14.0.2 (15610.3.7.1.10 15610), detected by httpd as: "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0.2 Safari/605.1.15" DUPLICATED: from Safari (Version 16.1 (17614.2.9.1.13, 17614), detected by httpd as: "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/16.1 Safari/605.1.15" It seems to be related to:
https://bugs.webkit.org/show_bug.cgi?id=249916
It seemed to happened at around the time of this change:
https://trac.webkit.org/changeset/293672/webkit/
Attachments
test case
(186 bytes, text/html)
2023-01-04 13:11 PST
,
Fujii Hironori
no flags
Details
Patch
(3.75 KB, patch)
2023-01-11 20:20 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.30 KB, patch)
2023-01-11 20:23 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andrey Pashnin
Comment 1
2022-12-28 05:02:06 PST
Also OK from Chrome, detected by httpd as: "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/108.0.0.0 Safari/537.36"
Andrey Pashnin
Comment 2
2022-12-29 03:41:31 PST
And as I expected, as soon as I upgraded iPadOS to 16.2 my Chrome is detected as AppleWEbKit/605.1.15 now and all the CR-LF pairs get duplicated!
Andrey Pashnin
Comment 3
2022-12-29 04:49:19 PST
I have just reproduced the bug with the latest version for Monterey:
258350@main
DECEMBER 29, 2022 AT 03:43 AM GMT+1 downloaded from here:
https://s3-us-west-2.amazonaws.com/minified-archives.webkit.org/mac-monterey-x86_64%20arm64-release/258350@main.zip
Andrey Pashnin
Comment 4
2022-12-30 02:57:38 PST
It only happens if a textarea has [wrap="hard"] attributes! If the attribute is removed, there are no more duplications.
Radar WebKit Bug Importer
Comment 5
2023-01-04 04:59:17 PST
<
rdar://problem/103870498
>
Fujii Hironori
Comment 6
2023-01-04 13:11:25 PST
Created
attachment 464336
[details]
test case
Fujii Hironori
Comment 7
2023-01-04 13:12:20 PST
I did bisecting with my WinCairo collection.
r281133
good
r281553
bad
Fujii Hironori
Comment 8
2023-01-04 13:18:37 PST
240773@main
(
bug#228882
) seems to be suspicious.
alan
Comment 9
2023-01-04 13:37:38 PST
(In reply to Fujii Hironori from
comment #8
)
>
240773@main
(
bug#228882
) seems to be suspicious.
yeah that's a strong candidate.
alan
Comment 10
2023-01-11 20:20:42 PST
Created
attachment 464463
[details]
Patch
alan
Comment 11
2023-01-11 20:23:03 PST
Created
attachment 464464
[details]
Patch
EWS
Comment 12
2023-01-12 07:54:54 PST
Committed
258830@main
(4dde2b983f43): <
https://commits.webkit.org/258830@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464464
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug