REGRESSION (Safari 14-16): Duplicated CR-LF in textarea with wrap="hard" https://bugs.webkit.org/show_bug.cgi?id=249923 <rdar://problem/103870498>

Reviewed by Antti Koivisto.

This was caused by a slight confusion of when legacy line layout sets "endsWithBreak" on a line.
While initially this bit was introduced for <br> (previousLineBrokeAtBR), over time it
turned into a "any type of line break" bit.
skipToNextSoftLineBreakPosition now checks for "any line break" and also ignores the last line.

* Source/WebCore/html/HTMLTextFormControlElement.cpp:
(WebCore::HTMLTextFormControlElement::valueWithHardLineBreaks const):

Canonical link: https://commits.webkit.org/258830@main